added makefile, error fixes, new features, car handlers
