# internal/app/app.go
@@ -11,26 +11,38 @@ import (
 
 func CreateApp() {
 	log.Println("Starting server...")
-	r := mux.NewRouter()
 
-	r.PathPrefix("/swagger/").Handler(httpSwagger.Handler(
+	R := mux.NewRouter()
+
+	R.PathPrefix("/swagger/").Handler(httpSwagger.Handler(
 		httpSwagger.URL("http://localhost:8080/swagger/doc.json"), //The url pointing to API definition
 		httpSwagger.DeepLinking(true),
 		httpSwagger.DocExpansion("none"),
 		httpSwagger.DomID("swagger-ui"),
 	)).Methods(http.MethodGet)
 
-	r.PathPrefix("/static/").Handler(http.StripPrefix("/static/", http.FileServer(http.Dir("../../internal/static"))))
-	r.HandleFunc("/", rest.HomeHandler)
-	r.HandleFunc("/catalog", rest.CatalogHandler)
-	r.HandleFunc("/about", rest.AboutHandler)
+	R.PathPrefix("/static/").Handler(http.StripPrefix("/static/", http.FileServer(http.Dir("../../internal/static"))))
+	R.HandleFunc("/", rest.HomeHandler)
+	R.HandleFunc("/catalog", rest.CatalogHandler)
+	R.HandleFunc("/about", rest.AboutHandler)
 
-	r.HandleFunc("/auth/signup", rest.SignupHandler).Methods(http.MethodPost)
-	r.HandleFunc("/auth/signin", rest.SigninHandler).Methods(http.MethodPost)
+	R.HandleFunc("/auth/signup", rest.SignupHandler).Methods(http.MethodPost)
+	R.HandleFunc("/auth/signin", rest.SigninHandler).Methods(http.MethodPost)
 
-	r.HandleFunc("/user/{id}", service.VerifyJWT(rest.GetUserByIdHandler)).Methods(http.MethodGet)
-	r.HandleFunc("/verify/{id}/token:{token}", rest.EmailConfirmHandler).Methods(http.MethodGet)
+	R.HandleFunc("/user/{id}", service.VerifyJWT(rest.GetUserByIdHandler)).Methods(http.MethodGet)
+	R.HandleFunc("/user/{id}", service.VerifyJWT(rest.EditProfileHandler)).Methods(http.MethodPut)
+	R.HandleFunc("/user/{id}", service.VerifyJWT(rest.DeleteProfileHandler)).Methods(http.MethodDelete)
+
+	R.HandleFunc("/verify/{id}/token:{token}", rest.EmailConfirmHandler).Methods(http.MethodGet)
+
+	R.HandleFunc("/car/new", service.VerifyJWT(rest.PostCarHandler)).Methods(http.MethodPost)
+	R.HandleFunc("/car/{id}", service.VerifyJWT(rest.GetCarByIdHandler)).Methods(http.MethodGet)
+	R.HandleFunc("/car/{id}", service.VerifyJWT(rest.DeleteCarHandler)).Methods(http.MethodDelete)
+	R.HandleFunc("/car", service.VerifyJWT(rest.GetAllCarsHandler)).Methods(http.MethodGet)
+	R.HandleFunc("/car/book/{id}", service.VerifyJWT(rest.BookCarHandler)).Methods(http.MethodPut)
+	R.HandleFunc("/car/cancel/{id}", service.VerifyJWT(rest.CancelBookHandler)).Methods(http.MethodPut)
+	R.HandleFunc("/car/available", service.VerifyJWT(rest.GetAvailableCarsHandler)).Methods(http.MethodGet)
 
 	log.Println("Server started on :8080")
-	log.Fatal(http.ListenAndServe("localhost:8080", r))
+	log.Fatal(http.ListenAndServe("localhost:8080", R))
 }
